<resources>
    <string name="app_name">Image Tagger</string>
    <string name="background">Background</string>
    <string name="chosen_image">Chosen Image</string>
    <string name="predictions">Predictions</string>
    <string name="confirm_button">Confirm</string>
    <string name="add_tag">Add Tag</string>
    <string name="discard_button">Discard</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="search_tags">Search tags</string>
    <string name="upload_image_text">Upload your image</string>
</resources>
